fix: Issue #3305 Stage-Calendar is open behind the advance search pop-up in inventory module

--- a/apps/web-giddh/src/assets/css/style-2.scss
+++ b/apps/web-giddh/src/assets/css/style-2.scss
@@ -2746,7 +2746,7 @@
                     box-shadow: 0 3px 28px 0 rgba(0, 0, 0, .14);
                     color: #616161;
                     border: 1px solid #ccc;
-                    z-index: 9989 !important;
+                    z-index: 9999 !important;
                 }
 
                 .daterangepicker .input-mini.active {
